--- a/index.css
+++ b/index.css
@@ -1,42 +1,36 @@
-.app{
-    display: inline-flex;
-    border:1px solid black;
-    margin:10px;
+html{
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-.app1,.app2{
-    margin:10px;
+a{
+    text-decoration: none !important;
+    color:black;
 }
 
-.navbar{
-    border-bottom:1px solid black;
-    background-color: black;
-    width: 100%;
+a:hover{
+    text-decoration: none !important;
 }
-.navbar li{
+
+.main{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top:10%;
+}
+
+.main .card{
+    width:200px;
+    height: 100px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 1px 2px 5px gray;
+    margin-bottom: 30px;
+    border-radius: 5px;
+}
+
+.main .card:hover{
+    background-color: darkorange;
     color:white;
-    float: left;
-    list-style: none;
-    font-size: 20px;
-    margin:10px 20px;
-    cursor: pointer;
 }
-
-table,th,td{
-    border:1px solid black;
-    border-collapse:collapse;
-    text-align:left;
-  }
-  
-  tr{
-    width:100%;
-  }
-  
-  th,td{
-    padding:15px;
-  }
-  
-  .blue{
-    background-color:lightblue;
-    font-weight:bold;
-  }
