--- a/shoplane/index.css
+++ b/shoplane/index.css
@@ -146,6 +146,11 @@ body {
     box-shadow: 0 2px 10px rgb(0 0 0 / 30%);
 }
 
+.card a {
+    text-decoration: none;
+    color: #fff;
+}
+
 .card:hover{
     box-shadow: 3px 3px 20px rgb(0 0 0 / 30%);
 }
@@ -180,6 +185,135 @@ body {
     font-size: 15px;
     letter-spacing: 2px;
     color: #009688;
+}
+
+footer {
+    background-color: black;
+    height: 180px;
+    padding: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+footer ul li {
+    list-style: none;
+    text-transform: uppercase;
+    margin-bottom: 5px;
+    cursor: pointer;
+}
+
+footer ul li a, footer ul li {
+    text-decoration: none;
+    color: #b8b8b8;
+    font-size: 12px;
+}
+
+footer ul li h3 {
+    text-decoration: none;
+    color: #dcdcdc;
+    font-size: 16px;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+footer ul li a:hover, footer ul li:hover {
+    color: #009688;
+    text-decoration: none;
+}
+
+#product {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 15px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.left-column {
+    width: 40%;
+}
+
+.left-column img {
+    width: 100%;
+    margin-top: 50px;
+}
+
+.right-column {
+    width: 60%;
+    margin-top: 40px;
+    padding-left: 30px;
+}
+
+.product-description {
+    margin-bottom: 40px;
+}
+
+.product-description h1 {
+    font-weight: 300;
+    font-size: 44px;
+    letter-spacing: -2px;
+}
+
+.product-description h4 {
+    margin-top: 20px;
+    font-weight: 200;
+    font-size: 20px;
+    letter-spacing: 1px;
+    color: rgb(27, 25, 25);
+}
+
+.product-description h3 {
+    margin-top: 20px;
+    font-weight: 200;
+    font-size: 20px;
+    letter-spacing: 1px;
+    color: rgb(27, 25, 25);
+}
+
+.product-description h3 span {
+    color: #009688;
+    font-weight: bold;
+}
+
+.product-description p {
+    margin-top: 20px;
+    font-size: 16px;
+    font-weight: 300;
+    color: #86939e;
+}
+
+.product-preview .previewImg {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: left;
+    margin-top: 20px;
+}
+
+.product-preview .previewImg img {
+    margin: 5px;
+    width: 15%;
+    height: 30%;
+    cursor: pointer;
+    padding: 4px;
+    border-radius: 6px;
+}
+
+.active {
+    border: 2px solid #009688;
+}
+
+.btn button {
+    font-size: 16px;
+    font-weight: bold;
+    color: #fff;
+    padding: 10px 20px;
+    letter-spacing: 2px;
+    background-color: #009688;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    box-shadow: 0 2px 10px rgb(0 0 0 / 50%);
 }
 
 @media screen and (max-width: 900px){
@@ -218,5 +352,37 @@ body {
 
     .burger {
         display: block;
+    }
+}
+
+@media screen and (max-width:600px){
+    footer {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        height: auto;
+    }
+    
+    footer ul {
+        width: 50%;
+        margin-bottom: 50px;
+    }
+
+    .left-column {
+        width: 100%;
+    }
+
+    .left-column img {
+        margin-top: 30px;
+    }
+
+    .right-column {
+        width: 100%;
+        margin-top: 40px;
+        padding-left: 30px;
+    }
+
+    .product-description h3 {
+        font-size: 17px;
     }
 }
