--- a/index.css
+++ b/index.css
@@ -14,6 +14,7 @@ a:hover{
 .main{
     display:flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
     margin-top:10%;
@@ -26,7 +27,7 @@ a:hover{
     justify-content: center;
     align-items: center;
     box-shadow: 1px 2px 5px gray;
-    margin-bottom: 30px;
+    margin: 30px;
     border-radius: 5px;
 }
 
